# ihsboost

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  PosixQreceiver_8cpp-example.html  PosixQsender_8cpp-example.html  README.md  _formulas.tex  accelerate_8hpp.html  accelerate_8hpp__dep__incl.map  accelerate_8hpp__dep__incl.md5  accelerate_8hpp__incl.map  accelerate_8hpp__incl.md5  accelerate_8hpp_source.html  accelerator_8hpp.html  accelerator_8hpp__dep__incl.map  accelerator_8hpp__dep__incl.md5  accelerator_8hpp_source.html  accelerator__test_8cpp.html  accelerator__test_8cpp__incl.map  accelerator__test_8cpp__incl.md5  accumulator_8hpp.html  accumulator_8hpp__dep__incl.map  accumulator_8hpp__dep__incl.md5  accumulator_8hpp__incl.map  accumulator_8hpp__incl.md5  accumulator_8hpp_source.html  all.hpp  all_8hpp.html  all_8hpp__incl.map  all_8hpp__incl.md5  all_8hpp_source.html  annotated.html  back__and__forth__test_8cpp.html  back__and__forth__test_8cpp__incl.map  back__and__forth__test_8cpp__incl.md5  back_and_forth_8cpp-example.html  back_and_forth_8py-example.html  background__task_8hpp.html  background__task_8hpp__dep__incl.map  (+791 more)
.github/: clang-format.yml
bindings/: CMakeLists.txt  bindings.cpp  communicate_bindings.cpp  create_extra_bindings.cpp  ihs_bindings.pyi  movement_bindings.cpp  servos_bindings.cpp  test2.py  util_bindings.cpp
bindings/include/: ihs_bindings.pyi
bindings/src/: communicate_bindings.cpp
bindings/test/: back_and_forth_test.cpp  back_and_forth_test.py
communicate/: CMakeLists.txt
communicate/include/: communicate.hpp  communication_exception.hpp  communicator.hpp  message.hpp  message_buf.hpp  posixqcommunicator.hpp  shmcommunicator.hpp  socketcommunicator.hpp  sysvcommunicator.hpp
communicate/src/: communication_exception.cpp  communicator.cpp  message.cpp  message_buf.cpp  posixqcommunicator.cpp  shmcommunicator.cpp  socketcommunicator.cpp  sysvcommunicator.cpp
communicate/test/: communicate_test.cpp  message_buf_test.cpp  shm_test.cpp
communicate/tests/: a.out  communicate.cpp  message_tests.cpp  posix_q.cpp  socketing.cpp  system_v.cpp  testing.cpp
controllers/: CMakeLists.txt
controllers/include/: accelerator.hpp  controllers.hpp
controllers/src/: accelerator.cpp  controllers.cpp
controllers/test/: accelerator_test.cpp
create_extra/: CMakeLists.txt
create_extra/include/: create_extra.hpp
create_extra/src/: create_extra.cpp
create_extra/tests/: test.cpp
modules/: CMakeLists.txt
modules/bindings/: CMakeLists.txt
modules/bindings/include/: ihs_bindings.pyi
modules/bindings/src/: bindings.cpp  communicate_bindings.cpp  create_extra_bindings.cpp  movement_bindings.cpp  servos_bindings.cpp  util_bindings.cpp
modules/communicate/: CMakeLists.txt
modules/communicate/include/: btcommunicator.hpp  communicate.hpp  communicator.hpp  posixqcommunicator.hpp  shmcommunicator.hpp  sysvcommunicator.hpp
modules/communicate/include/ihsboost/communicate/: btcommunicator.hpp  communicate.hpp  communication_exception.hpp  communicator.hpp  message_buf.hpp  posixqcommunicator.hpp  shmcommunicator.hpp  socketcommunicator.hpp  sysvcommunicator.hpp
modules/communicate/src/: btcommunicator.cpp  communication_exception.cpp  communicator.cpp  message_buf.cpp  posixqcommunicator.cpp  shmcommunicator.cpp  socketcommunicator.cpp  sysvcommunicator.cpp
modules/controllers/: CMakeLists.txt
modules/controllers/include/ihsboost/controllers/: controllers.hpp
modules/controllers/src/: controllers.cpp
modules/create_extra/: CMakeLists.txt
modules/create_extra/include/ihsboost/create_extra/: create_extra.hpp
modules/create_extra/src/: create_extra.cpp
modules/filters/: CMakeLists.txt
modules/include/: all.hpp  modules.hpp.in
modules/movement/: CMakeLists.txt
modules/movement/include/: imu_movement.hpp  maneuvers.hpp  movement.hpp  movement_constants.hpp  roomba_movement.hpp  singletons.hpp
modules/movement/src/: accelerate.cpp  imu_movement.cpp  line_follow.cpp  maneuvers.cpp  roomba_movement.cpp  singletons.cpp
modules/servos/: CMakeLists.txt
modules/servos/src/: servos.cpp
modules/threading/: CMakeLists.txt
modules/threading/include/: threadable.hpp
modules/threading/src/: accumulator.cpp  background_task.cpp  threadable.cpp
modules/util/: CMakeLists.txt
modules/util/include/: roomba_config.json  small_bot_config.json  speed.hpp  timer.hpp
modules/util/src/: config.cpp  json_config.cpp  speed.cpp  timer.cpp
movement/: CMakeLists.txt
movement/include/: accelerate.hpp  gyro_movement.hpp  imu_movement.hpp  line_follow.hpp  movement.hpp  roomba_movement.hpp  roomba_turns.hpp
movement/src/: accelerate.cpp  gyro_movement.cpp  imu_movement.cpp  line_follow.cpp  roomba_movement.cpp  roomba_turns.cpp
movement/tests/: encoder_test.cpp  pid_test.cpp  test.cpp
servos/: CMakeLists.txt
servos/include/: servos.hpp
servos/src/: servos.cpp
tests/: CMakeLists.txt
tests/bindings/: CMakeLists.txt
tests/bindings/test/: back_and_forth_test.cpp  back_and_forth_test.py
tests/communicate/: CMakeLists.txt
tests/communicate/test/: communicate_test.cpp  message_buf_test.cpp  shm_test.cpp
tests/controllers/: CMakeLists.txt
tests/controllers/test/: accelerator_test.cpp
tests/filters/: CMakeLists.txt
tests/filters/test/: ratest.cpp
tests/include/: test.hpp
tests/threading/: CMakeLists.txt
tests/threading/test/: thread_test.cpp
tests/util/: CMakeLists.txt
tests/util/test/: config_test.cpp
threading/: CMakeLists.txt
threading/include/: accumulator.hpp  background_task.hpp  threadable.hpp  threading.hpp
threading/src/: accumulator.cpp  background_task.cpp  threadable.cpp
threading/tests/: test.cpp
util/: CMakeLists.txt
util/include/: accumulator.hpp  cliff.hpp  config.hpp  config.hpp.in  json_config.hpp  roomba_config.hpp  roomba_config.json  small_bot_config.hpp  small_bot_config.json  speed.hpp  timer.hpp  util.hpp
util/src/: accumulator.cpp  config.cpp  json_config.cpp  speed.cpp  timer.cpp
util/test/: config_test.cpp
util/tests/: json_loader.hpp  other-config.json
(+144 files in other folders)
